// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactTestRenderer snapshots should omit complex props 1`] = `
<Grid
  foo={
    Object {
      "$className": "Foo",
    }
  }
  store={
    Object {
      "$className": "Ext.data.Store",
    }
  }
  title="Employees"
/>
`;

exports[`ReactTestRenderer snapshots should support ExtReact components inside html elements 1`] = `
<div>
  <Container>
    <Button
      text="Button"
    />
    <div>
      Test
    </div>
  </Container>
</div>
`;

exports[`ReactTestRenderer snapshots should support function props 1`] = `
<Button
  handler={[Function]}
  text="Button"
/>
`;

exports[`ReactTestRenderer snapshots should support html child elements 1`] = `
<Container>
  <div
    className="foo"
    style={
      Object {
        "color": "red",
      }
    }
  >
    <b>
      F
    </b>
    oo
  </div>
  <div
    className="bar"
  >
    Bar
  </div>
</Container>
`;

exports[`ReactTestRenderer snapshots should support nested ExtReact components 1`] = `
<Grid
  store={
    Object {
      "$className": "Ext.data.Store",
    }
  }
  title="Employees"
>
  <Toolbar>
    <Button
      text="Add Record"
    />
  </Toolbar>
  <Column
    dataIndex="name"
    text="Name"
  />
</Grid>
`;
